fix overflow on sr

--- a/src/assets/scss/sr-redesign/sr_page.scss
+++ b/src/assets/scss/sr-redesign/sr_page.scss
@@ -22,6 +22,11 @@ body:not(.navbar-mobile-active) {
     }
 }
 
+.fix-zindex-sr {
+    position: relative;
+    z-index: 2;
+}
+
 .page--scroll {
     position: absolute;
     bottom: $sr_global-offset-value * 6;
